...
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter code that student will start with:" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
...
